# AIVideoPipeline

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  RULES.md
backend/: benchmark_media_dedup.py  benchmark_phase9_media_live.py  benchmark_phase9_performance.py  check_media_dedup_regression.py  collect_media_dedup_corpus.py  pyproject.toml  requirements-dev.txt  requirements.txt  review_media_hard_negatives.py  sidecar.py  smoke_e2e_workflow.py  smoke_phase8_render_recovery.py  smoke_phase8_rich_workflow.py  smoke_render_profiles.py
backend/app/: main.py
configs/: media_dedup_approval.json  media_dedup_benchmark.example.json  media_dedup_thresholds.json  prompts.json
docs/: phase_10_release_handoff.md  phase_10_release_notes.md  phase_6_render_engine_checklist.md  phase_7_ui_closure_checklist.md  phase_8_integration_checklist.md  phase_9_optimization_checklist.md  post_rc_qa_v0.1.0_rc1.md  post_rc_qa_v0.1.0_rc2.md  post_rc_qa_v0.1.0_rc3.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: benchmark_phase9_media_live.ps1  benchmark_phase9_performance.ps1  build_sidecar.ps1  check_all.ps1  check_backend.ps1  check_frontend.ps1  dev_backend.ps1  dev_frontend.ps1  install_backend.ps1  smoke_desktop_package.ps1  smoke_phase10_installed_app_performance.ps1  smoke_phase10_sidecar_startup.ps1  (+5 more)
(+185 files in other folders)
