[package]
name = "ai-video-pipeline-studio"
version = "0.1.0"
description = "AI Video Pipeline Studio desktop shell"
authors = ["AI Video Pipeline Studio"]
edition = "2021"

[lib]
name = "ai_video_pipeline_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
